<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.fiap.rodrigo.trabalhofinal.CadastrarActivity">

        <ImageButton
            android:id="@+id/btAbrirAltCamera"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_foto"
            android:text="@string/txtAbrirCamera" />
        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/colorAccent"
            android:layout_height="wrap_content"
            android:text="@string/txtTirarFoto"/>

        <ImageView
            android:id="@+id/imagem"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/ic_restaurante" />

        <View
            android:background="@color/primary_text_dark"
            android:layout_width = "match_parent"
            android:layout_height="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txtLatitude"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/tvValorAltLatitude"
                    android:text="@string/txtValorZero"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txtLongitude"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/tvValorAltLongitude"
                    android:text="@string/txtValorZero"/>
            </LinearLayout>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tiAltRestaurante"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/etAltRestaurante"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtNmRestaurante" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tiAltTelefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/etAltTelefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtTelefone"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tiAltCustoMedio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/etAltCustoMedio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtCustoMedio"
                android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tiAltObservacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/etAltObservacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtObservacao" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/txtTipo" />

        <Spinner
            android:layout_width="match_parent"
            android:id="@+id/spAltTipo"
            android:entries="@array/tipo"
            android:paddingBottom="30dp"
            android:layout_height="wrap_content"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtAlterar"
            android:textColor="@color/colorAccent"
            android:background="@color/primary_light"
            android:paddingBottom="30dp"
            android:id="@+id/btAltCadastrarRestaurante"/>


    </LinearLayout>
</ScrollView>
