<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo2"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:textSize="20sp"
        android:textColor="@color/icons"
        android:gravity="center"
        android:text="@string/txtVersao"
        android:textStyle="bold" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:textColor="@color/icons"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/txtDesenvolvedor"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvsobre"
        android:paddingTop="12dp"
        android:textColor="@color/icons"
        android:layout_marginTop="89dp"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/txtDescApp"
        android:textStyle="italic" />

</LinearLayout>
