<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/fundo"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <!--<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        card_view:cardBackgroundColor="#FFFFFF"
        card_view:cardCornerRadius="2dp"
        card_view:cardElevation="6dp">-->

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="40dp"
                android:gravity="center"
                android:text="@string/txtLogin"/>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/tiUsuario"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txtUsuario" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tiSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etSenha"
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:layout_height="wrap_content"
                    android:hint="@string/txtSenha" />
            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/entrarLogin"
                android:layout_width="match_parent"
                android:textColor="@color/icons"
                android:background="@color/primary_light"
                android:layout_height="wrap_content"
                android:text="@string/txtEntrar"
                android:layout_marginTop="5dp"/>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtCadastrar_se"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_marginTop="5dp"
                android:id="@+id/btnCadastrarLogin"/>

        </LinearLayout>

    <!--</android.support.v7.widget.CardView>-->

</LinearLayout>


