<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/fundo"
    android:orientation="vertical"
    tools:context=".LoginActivity">

      <!--  <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            card_view:cardBackgroundColor="#FFFFFF"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="6dp">-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="40dp"
                    android:gravity="center"
                    android:text="@string/txtCadastre_se"/>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tiCadUsuario"
                    android:layout_marginTop="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etCadUsuario"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txtUsuario" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tiCadSenha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etCadSenha"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txtSenha"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btCadLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/icons"
                    android:background="@color/primary_light"
                    android:layout_marginTop="5dp"
                    android:text="@string/txtCadastrar" />


            </LinearLayout>

        <!--</android.support.v7.widget.CardView>-->

    </LinearLayout>
