<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:clickable="true"
    android:foreground="?attr/selectableItemBackground"
    android:paddingTop="20dp"
    card_view:cardBackgroundColor="#FFFFFF"
    card_view:cardCornerRadius="2dp"
    card_view:cardElevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ProgressBar
                    android:id="@+id/pbRestaurante"
                    style="@android:style/Widget.ProgressBar.Large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_vertical"
                    android:layout_marginRight="6dp"
                    android:gravity="center|center_vertical"
                    android:visibility="invisible" />

            </FrameLayout>

            <TextView
                android:id="@+id/tvNomeRestaurante"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right|bottom"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimary"
                android:padding="10dp"
                android:text="@string/txtNomeRestaurante"
                android:textColor="@color/icons"
                android:textSize="22sp" />
        </FrameLayout>

        <!--<View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivRestaurante"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="16dp"
                android:paddingTop="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_restaurante" />

            <TextView
                android:id="@+id/tvObservacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="5"
                android:padding="16dp"
                android:text="EM MAIO DE 1994, NA RUA FIDALGA, ERA INAUGURADO UM BAR QUE PRETENDIA HOMENAGEAR UM DOS MAIORES POETAS DA HISTÓRIA DO ROCK, JAMES DOUGLAS MORRISON, OU SIMPLESMENTE JIM MORRISON, LÍDER E VOCALISTA DA BANDA THE DOORS" />


            <ImageView
                android:id="@+id/ivOpcoes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:padding="8dp"
                android:src="@drawable/ic_more" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvDescTelefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:ellipsize="end"
                android:maxLines="1"
                android:padding="16dp"
                android:text="@string/txtTelefone" />

            <TextView
                android:id="@+id/tvTelefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:ellipsize="end"
                android:maxLines="1"
                android:padding="16dp"
                android:text="36812469" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvDescCustoMedio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:ellipsize="end"
                android:maxLines="1"
                android:padding="16dp"
                android:text="@string/txtCustoMedio" />

            <TextView
                android:id="@+id/tvCustoMedio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:ellipsize="end"
                android:maxLines="1"
                android:padding="16dp"
                android:text="15.54" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvDescTipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:ellipsize="end"
                android:maxLines="1"
                android:padding="16dp"
                android:text="@string/txtTipo" />

            <TextView
                android:id="@+id/tvTipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:ellipsize="end"
                android:maxLines="1"
                android:padding="16dp"
                android:text="Rodizio" />

        </LinearLayout>

    </LinearLayout>


</android.support.v7.widget.CardView>